--- a/src/layout/src/AntDesign.ProLayout.csproj
+++ b/src/layout/src/AntDesign.ProLayout.csproj
@@ -1,30 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net5;net6;net7</TargetFrameworks>
-	<LangVersion>11.0</LangVersion>
-	<OutputType>Library</OutputType>
-    <IsPackable>true</IsPackable>
-    <RazorLangVersion>3.0</RazorLangVersion>
-    <Description>Ant Design Pro components for Blazor</Description>
-    <PackageProjectUrl>https://github.com/ant-design-blazor/pro-components</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/ant-design-blazor/pro-components</RepositoryUrl>
-    <PackageTags>blazor,ant-design,pro,layout,components</PackageTags>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <RepositoryType>git</RepositoryType>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Copyright>James Yeung</Copyright>
-    <Authors>James Yeung</Authors>
-    <PackageIcon>logo.png</PackageIcon>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <None Include="logo.png" Pack="true" PackagePath="" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="AntDesign" Version="0.14.4" />
-  </ItemGroup>
+  <Import Project="..\..\..\common.props" />
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' And '$(SolutionDir)'==''">
     <SolutionDir>../../../</SolutionDir>
